{
  "version": 4,
  "terraform_version": "0.14.2",
  "serial": 59,
  "lineage": "eb01f87f-bdcd-1cdf-9ad7-fe1330cbe88c",
  "resources": [
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "tfmodule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/loadBalancers/NO.4-LB-EXT/frontendIPConfigurations/NO.4-LB-EXT-frontend",
                "inbound_nat_rules": [
                  "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/loadBalancers/NO.4-LB-EXT/inboundNatRules/SSH-VM01",
                  "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/loadBalancers/NO.4-LB-EXT/inboundNatRules/SSH-VM02"
                ],
                "load_balancer_rules": [
                  "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/loadBalancers/NO.4-LB-EXT/loadBalancingRules/rule-http-80"
                ],
                "name": "NO.4-LB-EXT-frontend",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/publicIPAddresses/NO.4-LB-EXT-pip"
              }
            ],
            "id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/loadBalancers/NO.4-LB-EXT",
            "location": "eastus",
            "name": "NO.4-LB-EXT",
            "resource_group_name": "Hands-On-NO.4",
            "sku": "Standard"
          },
          "dependencies": [
            "module.lb.azurerm_public_ip.tfmodule",
            "module.resource_group.azurerm_resource_group.tfmodule"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "tfmodule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/networkInterfaces/vm-test-01-nic-ext/ipConfigurations/ipconfig1",
              "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/networkInterfaces/vm-test-02-nic-ext/ipConfigurations/ipconfig1"
            ],
            "id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/loadBalancers/NO.4-LB-EXT/backendAddressPools/NO.4-LB-EXT-backendpool",
            "load_balancing_rules": [
              "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/loadBalancers/NO.4-LB-EXT/loadBalancingRules/rule-http-80"
            ],
            "loadbalancer_id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/loadBalancers/NO.4-LB-EXT",
            "name": "NO.4-LB-EXT-backendpool",
            "resource_group_name": "Hands-On-NO.4"
          },
          "dependencies": [
            "module.lb.azurerm_lb.tfmodule",
            "module.lb.azurerm_public_ip.tfmodule",
            "module.resource_group.azurerm_resource_group.tfmodule"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "azurerm_lb_nat_rule",
      "name": "tfmodule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_ip_configuration_id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/networkInterfaces/vm-test-01-nic-ext/ipConfigurations/ipconfig1",
            "backend_port": 22,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/loadBalancers/NO.4-LB-EXT/frontendIPConfigurations/NO.4-LB-EXT-frontend",
            "frontend_ip_configuration_name": "NO.4-LB-EXT-frontend",
            "frontend_port": 30001,
            "id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/loadBalancers/NO.4-LB-EXT/inboundNatRules/SSH-VM01",
            "idle_timeout_in_minutes": 4,
            "loadbalancer_id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/loadBalancers/NO.4-LB-EXT",
            "name": "SSH-VM01",
            "protocol": "Tcp",
            "resource_group_name": "Hands-On-NO.4"
          },
          "dependencies": [
            "module.lb.azurerm_lb.tfmodule",
            "module.lb.azurerm_public_ip.tfmodule",
            "module.resource_group.azurerm_resource_group.tfmodule"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_ip_configuration_id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/networkInterfaces/vm-test-02-nic-ext/ipConfigurations/ipconfig1",
            "backend_port": 22,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/loadBalancers/NO.4-LB-EXT/frontendIPConfigurations/NO.4-LB-EXT-frontend",
            "frontend_ip_configuration_name": "NO.4-LB-EXT-frontend",
            "frontend_port": 30002,
            "id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/loadBalancers/NO.4-LB-EXT/inboundNatRules/SSH-VM02",
            "idle_timeout_in_minutes": 4,
            "loadbalancer_id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/loadBalancers/NO.4-LB-EXT",
            "name": "SSH-VM02",
            "protocol": "Tcp",
            "resource_group_name": "Hands-On-NO.4"
          },
          "dependencies": [
            "module.lb.azurerm_lb.tfmodule",
            "module.lb.azurerm_public_ip.tfmodule",
            "module.resource_group.azurerm_resource_group.tfmodule"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "tfmodule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/loadBalancers/NO.4-LB-EXT/probes/probe-http-80",
            "interval_in_seconds": 5,
            "load_balancer_rules": [
              "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/loadBalancers/NO.4-LB-EXT/loadBalancingRules/rule-http-80"
            ],
            "loadbalancer_id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/loadBalancers/NO.4-LB-EXT",
            "name": "probe-http-80",
            "number_of_probes": 2,
            "port": 80,
            "protocol": "Http",
            "request_path": "/",
            "resource_group_name": "Hands-On-NO.4"
          },
          "dependencies": [
            "module.lb.azurerm_lb.tfmodule",
            "module.lb.azurerm_public_ip.tfmodule",
            "module.resource_group.azurerm_resource_group.tfmodule"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "tfmodule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/loadBalancers/NO.4-LB-EXT/backendAddressPools/NO.4-LB-EXT-backendpool",
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/loadBalancers/NO.4-LB-EXT/frontendIPConfigurations/NO.4-LB-EXT-frontend",
            "frontend_ip_configuration_name": "NO.4-LB-EXT-frontend",
            "frontend_port": 80,
            "id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/loadBalancers/NO.4-LB-EXT/loadBalancingRules/rule-http-80",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/loadBalancers/NO.4-LB-EXT",
            "name": "rule-http-80",
            "probe_id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/loadBalancers/NO.4-LB-EXT/probes/probe-http-80",
            "protocol": "Tcp",
            "resource_group_name": "Hands-On-NO.4"
          },
          "dependencies": [
            "module.lb.azurerm_lb.tfmodule",
            "module.lb.azurerm_lb_backend_address_pool.tfmodule",
            "module.lb.azurerm_lb_probe.tfmodule",
            "module.lb.azurerm_public_ip.tfmodule",
            "module.resource_group.azurerm_resource_group.tfmodule"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "tfmodule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/publicIPAddresses/NO.4-LB-EXT-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.190.39.27",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "NO.4-LB-EXT-pip",
            "resource_group_name": "Hands-On-NO.4",
            "sku": "Standard"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.tfmodule"
          ]
        }
      ]
    },
    {
      "module": "module.lb_nat_set",
      "mode": "managed",
      "type": "azurerm_network_interface_nat_rule_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/networkInterfaces/vm-test-01-nic-ext/ipConfigurations/ipconfig1|/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/loadBalancers/NO.4-LB-EXT/inboundNatRules/SSH-VM01",
            "ip_configuration_name": "ipconfig1",
            "nat_rule_id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/loadBalancers/NO.4-LB-EXT/inboundNatRules/SSH-VM01",
            "network_interface_id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/networkInterfaces/vm-test-01-nic-ext"
          },
          "dependencies": [
            "module.lb.azurerm_lb.tfmodule",
            "module.lb.azurerm_lb_nat_rule.tfmodule",
            "module.lb.azurerm_public_ip.tfmodule",
            "module.nic.azurerm_network_interface.tfmodule",
            "module.resource_group.azurerm_resource_group.tfmodule",
            "module.storage.azurerm_storage_account.tfmodule",
            "module.vnet.azurerm_subnet.tfmodule",
            "module.vnet.azurerm_virtual_network.tfmodule"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/networkInterfaces/vm-test-02-nic-ext/ipConfigurations/ipconfig1|/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/loadBalancers/NO.4-LB-EXT/inboundNatRules/SSH-VM02",
            "ip_configuration_name": "ipconfig1",
            "nat_rule_id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/loadBalancers/NO.4-LB-EXT/inboundNatRules/SSH-VM02",
            "network_interface_id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/networkInterfaces/vm-test-02-nic-ext"
          },
          "dependencies": [
            "module.lb.azurerm_lb.tfmodule",
            "module.lb.azurerm_lb_nat_rule.tfmodule",
            "module.lb.azurerm_public_ip.tfmodule",
            "module.nic.azurerm_network_interface.tfmodule",
            "module.resource_group.azurerm_resource_group.tfmodule",
            "module.storage.azurerm_storage_account.tfmodule",
            "module.vnet.azurerm_subnet.tfmodule",
            "module.vnet.azurerm_virtual_network.tfmodule"
          ]
        }
      ]
    },
    {
      "module": "module.nic",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "tfmodule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/networkInterfaces/vm-test-01-nic-ext",
            "internal_domain_name_suffix": "31nhjmuq1fwe1jbpolo4s35sef.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.1.0.11",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/virtualNetworks/NO.4-VNet01/subnets/NO.4-Subnet01"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-8B-47-E9",
            "name": "vm-test-01-nic-ext",
            "private_ip_address": "10.1.0.11",
            "private_ip_addresses": [
              "10.1.0.11"
            ],
            "resource_group_name": "Hands-On-NO.4",
            "virtual_machine_id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Compute/virtualMachines/vm-test-01"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.tfmodule",
            "module.storage.azurerm_storage_account.tfmodule",
            "module.vnet.azurerm_subnet.tfmodule",
            "module.vnet.azurerm_virtual_network.tfmodule"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/networkInterfaces/vm-test-02-nic-ext",
            "internal_domain_name_suffix": "31nhjmuq1fwe1jbpolo4s35sef.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.1.0.12",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/virtualNetworks/NO.4-VNet01/subnets/NO.4-Subnet01"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-8B-49-66",
            "name": "vm-test-02-nic-ext",
            "private_ip_address": "10.1.0.12",
            "private_ip_addresses": [
              "10.1.0.12"
            ],
            "resource_group_name": "Hands-On-NO.4",
            "virtual_machine_id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Compute/virtualMachines/vm-test-02"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.tfmodule",
            "module.storage.azurerm_storage_account.tfmodule",
            "module.vnet.azurerm_subnet.tfmodule",
            "module.vnet.azurerm_virtual_network.tfmodule"
          ]
        }
      ]
    },
    {
      "module": "module.nic2",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "tfmodule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/networkInterfaces/vm-test-03-nic-int",
            "internal_domain_name_suffix": "s0wqh1vydmcupag212axldbpmg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "192.168.1.20",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/virtualNetworks/NO.4-VNet02/subnets/NO.4-Subnet02"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-8C-7E-BF",
            "name": "vm-test-03-nic-int",
            "private_ip_address": "192.168.1.20",
            "private_ip_addresses": [
              "192.168.1.20"
            ],
            "resource_group_name": "Hands-On-NO.4",
            "virtual_machine_id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Compute/virtualMachines/vm-test-03"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.tfmodule",
            "module.storage.azurerm_storage_account.tfmodule",
            "module.vnet2.azurerm_subnet.tfmodule",
            "module.vnet2.azurerm_virtual_network.tfmodule"
          ]
        }
      ]
    },
    {
      "module": "module.nic_ext_backendpool_set",
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "tfmodule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/loadBalancers/NO.4-LB-EXT/backendAddressPools/NO.4-LB-EXT-backendpool",
            "id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/networkInterfaces/vm-test-01-nic-ext/ipConfigurations/ipconfig1|/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/loadBalancers/NO.4-LB-EXT/backendAddressPools/NO.4-LB-EXT-backendpool",
            "ip_configuration_name": "ipconfig1",
            "network_interface_id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/networkInterfaces/vm-test-01-nic-ext"
          },
          "dependencies": [
            "module.lb.azurerm_lb.tfmodule",
            "module.lb.azurerm_lb_backend_address_pool.tfmodule",
            "module.lb.azurerm_public_ip.tfmodule",
            "module.nic.azurerm_network_interface.tfmodule",
            "module.resource_group.azurerm_resource_group.tfmodule",
            "module.storage.azurerm_storage_account.tfmodule",
            "module.vnet.azurerm_subnet.tfmodule",
            "module.vnet.azurerm_virtual_network.tfmodule"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/loadBalancers/NO.4-LB-EXT/backendAddressPools/NO.4-LB-EXT-backendpool",
            "id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/networkInterfaces/vm-test-02-nic-ext/ipConfigurations/ipconfig1|/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/loadBalancers/NO.4-LB-EXT/backendAddressPools/NO.4-LB-EXT-backendpool",
            "ip_configuration_name": "ipconfig1",
            "network_interface_id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/networkInterfaces/vm-test-02-nic-ext"
          },
          "dependencies": [
            "module.lb.azurerm_lb.tfmodule",
            "module.lb.azurerm_lb_backend_address_pool.tfmodule",
            "module.lb.azurerm_public_ip.tfmodule",
            "module.nic.azurerm_network_interface.tfmodule",
            "module.resource_group.azurerm_resource_group.tfmodule",
            "module.storage.azurerm_storage_account.tfmodule",
            "module.vnet.azurerm_subnet.tfmodule",
            "module.vnet.azurerm_virtual_network.tfmodule"
          ]
        }
      ]
    },
    {
      "module": "module.nsg",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "tfmodule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/networkSecurityGroups/NO.4-NSG01",
            "location": "eastus",
            "name": "NO.4-NSG01",
            "resource_group_name": "Hands-On-NO.4",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "port-tcp-22",
                "priority": 100,
                "protocol": "tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "port-tcp-80",
                "priority": 110,
                "protocol": "tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resource_group.azurerm_resource_group.tfmodule"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/networkSecurityGroups/NO.4-NSG02",
            "location": "eastus",
            "name": "NO.4-NSG02",
            "resource_group_name": "Hands-On-NO.4",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "port-tcp-22",
                "priority": 100,
                "protocol": "tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "port-tcp-80",
                "priority": 110,
                "protocol": "tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resource_group.azurerm_resource_group.tfmodule"
          ]
        }
      ]
    },
    {
      "module": "module.nsg",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "tfmodule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/networkSecurityGroups/NO.4-NSG01/securityRules/port-tcp-22",
            "name": "port-tcp-22",
            "network_security_group_name": "NO.4-NSG01",
            "priority": 100,
            "protocol": "tcp",
            "resource_group_name": "Hands-On-NO.4",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nsg.azurerm_network_security_group.tfmodule",
            "module.resource_group.azurerm_resource_group.tfmodule"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/networkSecurityGroups/NO.4-NSG01/securityRules/port-tcp-80",
            "name": "port-tcp-80",
            "network_security_group_name": "NO.4-NSG01",
            "priority": 110,
            "protocol": "tcp",
            "resource_group_name": "Hands-On-NO.4",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nsg.azurerm_network_security_group.tfmodule",
            "module.resource_group.azurerm_resource_group.tfmodule"
          ]
        }
      ]
    },
    {
      "module": "module.nsg2",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "tfmodule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/networkSecurityGroups/NO.4-NSG02",
            "location": "eastus",
            "name": "NO.4-NSG02",
            "resource_group_name": "Hands-On-NO.4",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "port-tcp-22",
                "priority": 100,
                "protocol": "tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "port-tcp-80",
                "priority": 110,
                "protocol": "tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resource_group.azurerm_resource_group.tfmodule"
          ]
        }
      ]
    },
    {
      "module": "module.nsg2",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "tfmodule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/networkSecurityGroups/NO.4-NSG02/securityRules/port-tcp-22",
            "name": "port-tcp-22",
            "network_security_group_name": "NO.4-NSG02",
            "priority": 100,
            "protocol": "tcp",
            "resource_group_name": "Hands-On-NO.4",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nsg2.azurerm_network_security_group.tfmodule",
            "module.resource_group.azurerm_resource_group.tfmodule"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/networkSecurityGroups/NO.4-NSG02/securityRules/port-tcp-80",
            "name": "port-tcp-80",
            "network_security_group_name": "NO.4-NSG02",
            "priority": 110,
            "protocol": "tcp",
            "resource_group_name": "Hands-On-NO.4",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nsg2.azurerm_network_security_group.tfmodule",
            "module.resource_group.azurerm_resource_group.tfmodule"
          ]
        }
      ]
    },
    {
      "module": "module.nsg_subnet_set",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "tfmodule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/virtualNetworks/NO.4-VNet01/subnets/NO.4-Subnet01",
            "network_security_group_id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/networkSecurityGroups/NO.4-NSG01",
            "subnet_id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/virtualNetworks/NO.4-VNet01/subnets/NO.4-Subnet01"
          },
          "dependencies": [
            "module.nsg.azurerm_network_security_group.tfmodule",
            "module.resource_group.azurerm_resource_group.tfmodule",
            "module.vnet.azurerm_subnet.tfmodule",
            "module.vnet.azurerm_virtual_network.tfmodule"
          ]
        }
      ]
    },
    {
      "module": "module.nsg_subnet_set2",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "tfmodule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/virtualNetworks/NO.4-VNet02/subnets/NO.4-Subnet02",
            "network_security_group_id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/networkSecurityGroups/NO.4-NSG02",
            "subnet_id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/virtualNetworks/NO.4-VNet02/subnets/NO.4-Subnet02"
          },
          "dependencies": [
            "module.nsg2.azurerm_network_security_group.tfmodule",
            "module.resource_group.azurerm_resource_group.tfmodule",
            "module.vnet2.azurerm_subnet.tfmodule",
            "module.vnet2.azurerm_virtual_network.tfmodule"
          ]
        }
      ]
    },
    {
      "module": "module.peering",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peer1to2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/virtualNetworks/NO.4-VNet01/virtualNetworkPeerings/peer1to2",
            "name": "peer1to2",
            "remote_virtual_network_id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/virtualNetworks/NO.4-VNet02",
            "resource_group_name": "Hands-On-NO.4",
            "use_remote_gateways": false,
            "virtual_network_name": "NO.4-VNet01"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.tfmodule",
            "module.vnet2.azurerm_virtual_network.tfmodule"
          ]
        }
      ]
    },
    {
      "module": "module.peering",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peer2to1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/virtualNetworks/NO.4-VNet02/virtualNetworkPeerings/peer2to1",
            "name": "peer2to1",
            "remote_virtual_network_id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/virtualNetworks/NO.4-VNet01",
            "resource_group_name": "Hands-On-NO.4",
            "use_remote_gateways": false,
            "virtual_network_name": "NO.4-VNet02"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.tfmodule",
            "module.vnet.azurerm_virtual_network.tfmodule"
          ]
        }
      ]
    },
    {
      "module": "module.routetable",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "tfmodule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/routeTables/NO.4-RT",
            "location": "eastus",
            "name": "NO.4-RT",
            "resource_group_name": "Hands-On-NO.4",
            "route": [
              {
                "address_prefix": "192.168.0.0/16",
                "name": "route1",
                "next_hop_in_ip_address": "192.168.1.20",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/virtualNetworks/NO.4-VNet01/subnets/NO.4-Subnet01"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nic2.azurerm_network_interface.tfmodule",
            "module.resource_group.azurerm_resource_group.tfmodule",
            "module.storage.azurerm_storage_account.tfmodule",
            "module.vnet2.azurerm_subnet.tfmodule",
            "module.vnet2.azurerm_virtual_network.tfmodule"
          ]
        }
      ]
    },
    {
      "module": "module.routetable",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "tfmodule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/virtualNetworks/NO.4-VNet02/subnets/NO.4-Subnet02",
            "route_table_id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/routeTables/NO.4-RT",
            "subnet_id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/virtualNetworks/NO.4-VNet02/subnets/NO.4-Subnet02"
          },
          "dependencies": [
            "module.nic2.azurerm_network_interface.tfmodule",
            "module.routetable.azurerm_route_table.tfmodule",
            "module.storage.azurerm_storage_account.tfmodule",
            "module.vnet2.azurerm_subnet.tfmodule"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "tfmodule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.0.0/16",
            "address_prefixes": [
              "10.1.0.0/16"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/virtualNetworks/NO.4-VNet01/subnets/NO.4-Subnet01",
            "name": "NO.4-Subnet01",
            "resource_group_name": "Hands-On-NO.4",
            "virtual_network_name": "NO.4-VNet01"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.tfmodule",
            "module.vnet.azurerm_virtual_network.tfmodule"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "tfmodule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/8"
            ],
            "guid": "b274daee-d990-4d6c-a42f-72dde977f225",
            "id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/virtualNetworks/NO.4-VNet01",
            "location": "eastus",
            "name": "NO.4-VNet01",
            "resource_group_name": "Hands-On-NO.4",
            "subnet": [
              {
                "address_prefix": "10.1.0.0/16",
                "id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/virtualNetworks/NO.4-VNet01/subnets/NO.4-Subnet01",
                "name": "NO.4-Subnet01",
                "security_group": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/networkSecurityGroups/NO.4-NSG01"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.tfmodule"
          ]
        }
      ]
    },
    {
      "module": "module.vnet2",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "tfmodule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.1.0/26",
            "address_prefixes": [
              "192.168.1.0/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/virtualNetworks/NO.4-VNet02/subnets/NO.4-Subnet02",
            "name": "NO.4-Subnet02",
            "resource_group_name": "Hands-On-NO.4",
            "virtual_network_name": "NO.4-VNet02"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.tfmodule",
            "module.vnet2.azurerm_virtual_network.tfmodule"
          ]
        }
      ]
    },
    {
      "module": "module.vnet2",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "tfmodule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.0.0/16"
            ],
            "guid": "ee03ad96-1bb8-4705-80dc-df01758c2f66",
            "id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/virtualNetworks/NO.4-VNet02",
            "location": "eastus",
            "name": "NO.4-VNet02",
            "resource_group_name": "Hands-On-NO.4",
            "subnet": [
              {
                "address_prefix": "192.168.1.0/26",
                "id": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/virtualNetworks/NO.4-VNet02/subnets/NO.4-Subnet02",
                "name": "NO.4-Subnet02",
                "security_group": "/subscriptions/73f945ea-93d3-435b-8a04-fe92eb8645c7/resourceGroups/Hands-On-NO.4/providers/Microsoft.Network/networkSecurityGroups/NO.4-NSG02"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.tfmodule"
          ]
        }
      ]
    }
  ]
}